--- a/praca/main.tex
+++ b/praca/main.tex
@@ -121,7 +121,7 @@ Jednym ze sposobów na badanie DLM jest tworzenie sztucznych języków losowych 
 
 DLM jest również powiązana z innymi właściwościami języków naturalnych, takimi jak projektywność i finalność głowy. Projektywność oznacza brak lub rzadkość przecinających się zależności, które wydłużają długość zależności. Finalność głowy oznacza kierunek występowania nadrzędnika frazy względem jej dopełnienia. Badania wykazały, że istnieje związek między finalnością głowy a długością zależności, przy czym języki o finalności głowy na końcu zdania mają krótszą długość zależności niż języki o finalności głowy na początku zdania \citep{FutrellEtAl2015}.
 
-DLM nie jest jednak jedynym czynnikiem kształtującym strukturę syntaktyczną języków naturalnych. Istnieją również inne ograniczenia i preferencje, takie jak harmonia głowy, ograniczenia informacyjne czy preferencje semantyczne, które mogą wpływać na kolejność słów i długość zależności. Niektóre z tych czynników mogą być sprzeczne lub komplementarne względem DLM. Dlatego DLM należy rozumieć jako jeden z wielu czynników wpływających na organizację języka naturalnego.
+DLM nie jest jednak jedynym czynnikiem kształtującym strukturę syntaktyczną języków naturalnych. Istnieją również inne ograniczenia i preferencje, takie jak harmonia języka \citep{Jing2022}, czy preferencje semantyczne, które mogą wpływać na kolejność słów i długość zależności. Niektóre z tych czynników mogą być sprzeczne lub komplementarne względem DLM. Dlatego DLM należy rozumieć jako jeden z wielu czynników wpływających na organizację języka naturalnego.
 
 \section{Różne reprezentacje koordynacji}
 Tekst sekcji
@@ -177,6 +177,9 @@ Haspelmath, M. (2007). Coordination. In T. Shopen (Ed.), \textit{Language typolo
 
 \bibitem [Hawkins(1994)]{Hawkins1994}
 Hawkins, J. A. (1994). A Performance Theory of Order and Constituency. \textit{Cambridge University Press}. Za: Anonimowe Zgłoszenie na ACL 2023 (nieopublikowane). Conjunct Lengths in English, Dependency Length Minimization, and Dependency Structure of Coordination
+
+\bibitem [Jing et al.(2022)]{Jing2022}
+Jing, Y., Blasi, D., \& Bickel, B. (2022). Dependency Length Minimization and Its Limits: A Possible Role for a Probabilistic Version of the Final-Over-Final Condition. \textit{Language} 98(3). \url{https://doi.org/10.1353/lan.2022.0013}. 
 
 \bibitem [Liu(2008)]{Liu2008}
 Liu, H. (2008). Dependency distance as a metric of language comprehension difficulty. \textit{Journal of Cognitive Science} 9(2), 159–191. \url{https://doi.org/10.17791/jcs.2008.9.2.159}
