added first attachments

--- a/praca/main.tex
+++ b/praca/main.tex
@@ -228,4 +228,8 @@ Tesnière, L. (1959). \textit{Éléments de syntaxe structurale. Préf. de Jean 
 
 \chapter*{Załączniki}
 \addcontentsline{toc}{chapter}{Załączniki}
+
+A -- link do plików z preprocessingiem danych: \url{https://github.com/kvmilos/PracaLicencjacka/tree/master/preprocessing} \\
+B -- link do pliku z analizą danych: \url{https://github.com/kvmilos/PracaLicencjacka/blob/master/analizy/r.R} \\
+C -- link do tabeli danych po preprocessingu w formacie ".csv": \url{https://github.com/kvmilos/PracaLicencjacka/blob/master/tabela.csv}
 \end{document}
