--- a/praca/main.tex
+++ b/praca/main.tex
@@ -2,6 +2,7 @@
 \usepackage{setspace}
 \usepackage{natbib}
 \usepackage{xcolor}
+\usepackage{tikz-dependency}
 \usepackage{graphicx}
 \usepackage{hyperref} 
  \hypersetup{ 
@@ -45,7 +46,7 @@ Praca ta ma na celu analizę zjawiska minimalizacji długości zależności – 
 
 (0) \textit{Widziałem} Asię \textbf{i} jej śmiesznego, młodszego brata. \\
 \\
-Długości członów mierzono na cztery różne sposoby, licząc znaki, sylaby, słowa oraz tokeny. W przykładzie (0) odpowiednie wartości wynosiłyby [4~vs~31, 2~vs~9, 1~vs~4, 1~vs~5]. Szybko pokazano, że jedna z hipotez zachodzi w większości przypadków, więc następnie omówiono wpływ obecności i pozycji nadrzędnika oraz długości różnicy między analizowanymi członami na proporcje danych, w których hipoteza ta jest prawdziwa. Praca ta ma charakter empiryczny, opiera się na danych pochodzących z Polish Dependency Bank (PDB), czyli korpusu języka polskiego zawierającego ponad 22 tysiące drzew zależnościowych oraz na podobnej pracy badającej te same zależności, ale dla języka angielskiego \citep{AnonimoweNieopublikowane}.
+Długości członów mierzono na cztery różne sposoby, licząc znaki, sylaby, słowa oraz tokeny. W przykładzie (0) odpowiednie wartości wynosiłyby [4~vs.~31, 2~vs.~9, 1~vs.~4, 1~vs.~5]. Szybko pokazano, że pierwsza z hipotez zachodzi w większości przypadków, więc następnie omówiono wpływ obecności i pozycji nadrzędnika oraz długości różnicy między analizowanymi członami na proporcje danych, w których hipoteza ta jest prawdziwa. Praca ta ma charakter empiryczny, opiera się na danych pochodzących z Polish Dependency Bank (PDB), czyli korpusu języka polskiego zawierającego ponad 22 tysiące drzew zależnościowych oraz na podobnej pracy badającej te same zależności, ale dla języka angielskiego \citep{AnonimoweNieopublikowane}.
 
 \section{Zakres i struktura pracy}
 Praca składa się z sześciu rozdziałów. W rozdziale drugim omówiono teoretyczne podstawy pracy, tj. przedstawiono czym są koordynacje -- na przykładzie języka polskiego, zaprezentowano zarys teorii zależności składniowej, opisano minimalizację teorii zależności oraz wskazano różne reprezentacje zależnościowe wraz z ich przewidywaniami. W rozdziale trzecim opisano źródło danych, czyli Polish Dependency Bank, jak i ich preprocessing -- działanie algorytmu, napisanego w języku Python, wybierającego koordynacje oraz informacje o nich z PDB, a także pokazano format danych po preprocessingu w pliku z rozszerzeniem ".csv". W rozdziale czwartym zaprezentowano hipotezy badawcze, ich testowanie wraz z analizami statystycznymi w języku R (m. in. test Wilcoxona, testy chi-kwadrat oraz ogólne modele liniowe [GLM – z ang. Generalised Linear Models]). W rozdziale piątym omówiono wyniki badań i ich interpretację w kontekście istniejącej wcześniej literatury naukowej. W rozdziale szóstym podsumowano pracę, wyciągnięto z niej wnioski oraz zaproponowano perspektywy dalszych badań. 
@@ -103,7 +104,33 @@ Teoria ta opiera się na kilku podstawowych założeniach \citep{Liu2008}:\\
     Mężczyzna z ciemnymi włosami i wąsami opiera się o słup, stojąc w pobliżu innych ludzi.
 \end{figure}
 
-Powyższe drzewo zależnościowe należy odczytywać w konkretny sposób. Elementy, które są niżej są zależne od elementów znajdujących się wyżej, z którymi są połączone. Korzeń znajduje się na samej górze. Tekst pod etykietami słów oznacza: niebieski -- funkcje, które pełnią w zdaniu oraz zielony -- tzw. \textit{tagi} danych wyrazów. W tym przypadku, słowo \textbf{opiera} jest korzeniem zdania.
+Powyższe drzewo należy odczytywać w konkretny sposób. Elementy, które są niżej są zależne od elementów znajdujących się wyżej, z którymi są połączone. Korzeń znajduje się na samej górze. Tekst pod etykietami słów oznacza: niebieski -- funkcje, które pełnią w zdaniu oraz zielony -- tzw. \textit{tagi} danych wyrazów. W tym przypadku, słowo \textbf{opiera} jest korzeniem zdania.
+
+(4) Drzewo zależnościowe dla tego samego zdania:
+
+\begin{dependency}[theme=simple]
+    \hspace{-2.5cm}
+    \begin{deptext}[column sep=0.1cm]
+Mężczyzna\&z \& ciemnymi \& włosami \& i \& wąsami \& opiera \& się \& o \& słup \& , \& stojąc \& w \& pobliżu \& innych \& ludzi \& . \\
+    \end{deptext}
+    \deproot{7}{root}
+    \depedge{1}{7}{subj}
+    \depedge{2}{1}{adjunct}
+    \depedge{3}{4}{adjunct}
+    \depedge{4}{5}{conjunct}
+    \depedge{5}{2}{comp}
+    \depedge{6}{5}{conjunct}
+    \depedge{8}{7}{refl}
+    \depedge{9}{7}{comp}
+    \depedge{10}{9}{comp}
+    \depedge{11}{12}{punct}
+    \depedge{12}{7}{adjunct\_compan}
+    \depedge{13}{12}{adjunct\_locat}
+    \depedge{14}{13}{mwe}
+    \depedge{15}{16}{adjunct}
+    \depedge{16}{14}{comp}
+    \depedge{17}{7}{punct}
+\end{dependency}
 
 Teoria zależności składniowej ma długą i bogatą historię, która sięga aż starożytności. Pierwsze ślady tego podejścia można znaleźć w gramatyce sanskrytu Pāṇiniego, czy w pracach wczesnych arabskich gramatyków \citep{Kruijff2002}, a także w niektórych teoriach gramatycznych średniowiecza \citep{Covington1984}. W XX wieku teoria ta mocno rozwinęła się zwłaszcza w lingwistyce klasycznej i słowiańskiej \citep{Melcuk1988}. \citet{Tesniere1959} podjął próvę stworzenia kompleksowej teorii gramatyki, w której to wszystko byłoby oparte na zależnościach. Przedstawił on jej potencjał do uchwycenia podobieństw, jak i różnic między językami.
 
@@ -113,10 +140,10 @@ Teoria zależności składniowej jest popularnym podejściem w dziedzinie przetw
 Minimalizacja długości zależności (DLM) to zasada, według której języki naturalne dążą do zmniejszania odległości między słowami zależnymi syntaktycznie. Zasada ta jest odnotowywana w lingwistyce już od długiego czasu i pozwala nam na bardziej efektywne analizowanie i generowanie języka naturalnego. W ciągu ostatnich 20 lat hipoteza o nacisku na DLM została wykorzystana do wyjaśnienia wielu z najbardziej uniwersalnych właściwości języków \citep{FutrellEtAl2015}.
 Jak twierdzą \citet{Hawkins1994} i \citet{FutrellEtAl2020}, rozróżniamy jej występowanie na poziom gramatyczny, jak i codzienne użycie języka. \citet{Liu2008} twierdzi, że długości zależności mogłyby być wskaźnikiem trudności danego języka, sugerując przy tym pewną uniwersalność stosowania DLM w celu łatwiejszego zrozumienia mowy i pisma.
 
-Według DLM, jeśli oba ustawienia członów koordynacji binarnych (jeden człon raz z lewej strony, raz z prawej) są gramatycznie poprawne, to bliżej głowy znajdzie się krótszy człon. W przykładach (4a, 4b) oba ustawienia wydają się brzmieć naturalnie, jednak gdy wydłużymy jeden z członów -- w (4c, 4d), zauważymy, że bardziej naturalne będzie ustawienie krótszego członu z lewej strony.
+Według DLM, jeśli oba ustawienia członów koordynacji binarnych (jeden człon raz z lewej strony, raz z prawej) są gramatycznie poprawne, to bliżej głowy znajdzie się krótszy człon. W przykładach (5a, 5b) oba ustawienia wydają się brzmieć naturalnie, jednak gdy wydłużymy jeden z członów -- w (5c, 5d), zauważymy, że bardziej naturalne będzie ustawienie krótszego członu z lewej strony.
 \\
 
-(4)
+(5)
 
 a. \textit{Nie ma} Kamila \textbf{i} Julii.
 
@@ -127,10 +154,10 @@ c. \textit{Nie ma} Kamila \textbf{i} wiecznie spóźnionej Julii.
 d. \textit{Nie ma} wiecznie spóźnionej Julii \textbf{i} Kamila.
 \\
 \\
-\citet{Hawkins1994} argumentuje, że DLM występuje w gramatyce, ale niekoniecznie w użyciu codziennym. Jako powód wskazuje, że w języku angielskim kolejność V-NP-PP (V - czasownik [z ang. verb], NP - fraza rzeczownikowa [z ang. nominal phrase], PP - fraza przyimkowa [z ang. prepositional phrase]) występuje częsciej niż V-PP-NP nie tylko gdy NP jest krótsze od PP, ale i wtedy gdy są podobnej długości. Używa on tego przykładu, ponieważ jest on jednym z tych, które uważa się za ilustrujące występowanie DLM (jako że NP są zazwyczaj krótsze niż PP). Słowa Hawkinsa dla języka angielskiego ilustrują przykłady (5a, 5b), w których kolejność V-NP-PP jest bardziej naturalna niż V-PP-NP), mimo że obie frazy są podobnej długości. Zdanie (5c) również brzmi jednak naturalnie, co wskazuje na pewien wpływ dodatkowego czynnika --  długości różnicy obu członów koordynacji na to, czy DLM będzie w danym przypadku zachowana.
+\citet{Hawkins1994} argumentuje, że DLM występuje w gramatyce, ale niekoniecznie w użyciu codziennym. Jako powód wskazuje, że w języku angielskim kolejność V-NP-PP (V - czasownik [z ang. verb], NP - fraza rzeczownikowa [z ang. nominal phrase], PP - fraza przyimkowa [z ang. prepositional phrase]) występuje częsciej niż V-PP-NP nie tylko gdy NP jest krótsze od PP, ale i wtedy gdy są podobnej długości. Używa on tego przykładu, ponieważ jest on jednym z tych, które uważa się za ilustrujące występowanie DLM (jako że NP są zazwyczaj krótsze niż PP). Słowa Hawkinsa dla języka angielskiego ilustrują przykłady (6a, 6b), w których kolejność V-NP-PP jest bardziej naturalna niż V-PP-NP), mimo że obie frazy są podobnej długości. Zdanie (6c) również brzmi jednak naturalnie, co wskazuje na pewien wpływ dodatkowego czynnika --  długości różnicy obu członów koordynacji na to, czy DLM będzie w danym przypadku zachowana.
 \\
 
-(5)
+(6)
 
 a. I gave <a book> <to John>. [Dałem <książkę> <Johnowi>.]
 
@@ -147,7 +174,11 @@ DLM jest również powiązana z innymi właściwościami języków naturalnych, 
 DLM nie jest jednak jedynym czynnikiem kształtującym strukturę syntaktyczną języków naturalnych. Istnieją również inne ograniczenia i preferencje, takie jak harmonia języka \citep{Jing2022}, czy preferencje semantyczne, które mogą wpływać na kolejność słów i długość zależności. Niektóre z tych czynników mogą być sprzeczne lub komplementarne względem DLM. Dlatego DLM należy rozumieć jako jeden z wielu czynników wpływających na organizację języka naturalnego.
 
 \section{Różne reprezentacje koordynacji}
-Tekst sekcji
+\begin{dependency}[theme = simple]
+    \begin{deptext}[column sep=1em]
+       G \& 1.1 \& 1.2 \& 1.3 \& , \& 2.1 \& 2.2 \& 2.3 \& S \& 3.1 \& 3.2 \& 3.3 \\
+    \end{deptext}
+ \end{dependency}
 
 \chapter{Polish Dependency Bank -- źródło danych i narzędzia do analizy}
 Tekst rozdziału
