--- a/praca/main.tex
+++ b/praca/main.tex
@@ -108,28 +108,28 @@ Powyższe drzewo należy odczytywać w konkretny sposób. Elementy, które są n
 
 (4) Drzewo zależnościowe dla tego samego zdania:
 
-\begin{dependency}[theme=simple]
+\begin{dependency}[theme=simple, label style = {text = blue}]
     \hspace{-2.5cm}
     \begin{deptext}[column sep=0.1cm]
 Mężczyzna\&z \& ciemnymi \& włosami \& i \& wąsami \& opiera \& się \& o \& słup \& , \& stojąc \& w \& pobliżu \& innych \& ludzi \& . \\
     \end{deptext}
     \deproot{7}{root}
-    \depedge{1}{7}{subj}
-    \depedge{2}{1}{adjunct}
-    \depedge{3}{4}{adjunct}
-    \depedge{4}{5}{conjunct}
-    \depedge{5}{2}{comp}
-    \depedge{6}{5}{conjunct}
-    \depedge{8}{7}{refl}
-    \depedge{9}{7}{comp}
-    \depedge{10}{9}{comp}
-    \depedge{11}{12}{punct}
-    \depedge{12}{7}{adjunct\_compan}
-    \depedge{13}{12}{adjunct\_locat}
-    \depedge{14}{13}{mwe}
-    \depedge{15}{16}{adjunct}
-    \depedge{16}{14}{comp}
-    \depedge{17}{7}{punct}
+    \depedge{7}{1}{subj}
+    \depedge{1}{2}{adjunct}
+    \depedge{4}{3}{adjunct}
+    \depedge{5}{4}{conjunct}
+    \depedge{2}{5}{comp}
+    \depedge{5}{6}{conjunct}
+    \depedge{7}{8}{refl}
+    \depedge{7}{9}{comp}
+    \depedge{9}{10}{comp}
+    \depedge{12}{11}{punct}
+    \depedge{7}{12}{adjunct\_compan}
+    \depedge{12}{13}{adjunct\_locat}
+    \depedge{13}{14}{mwe}
+    \depedge{16}{15}{adjunct}
+    \depedge{14}{16}{comp}
+    \depedge{7}{17}{punct}
 \end{dependency}
 
 Teoria zależności składniowej ma długą i bogatą historię, która sięga aż starożytności. Pierwsze ślady tego podejścia można znaleźć w gramatyce sanskrytu Pāṇiniego, czy w pracach wczesnych arabskich gramatyków \citep{Kruijff2002}, a także w niektórych teoriach gramatycznych średniowiecza \citep{Covington1984}. W XX wieku teoria ta mocno rozwinęła się zwłaszcza w lingwistyce klasycznej i słowiańskiej \citep{Melcuk1988}. \citet{Tesniere1959} podjął próvę stworzenia kompleksowej teorii gramatyki, w której to wszystko byłoby oparte na zależnościach. Przedstawił on jej potencjał do uchwycenia podobieństw, jak i różnic między językami.
@@ -174,11 +174,132 @@ DLM jest również powiązana z innymi właściwościami języków naturalnych, 
 DLM nie jest jednak jedynym czynnikiem kształtującym strukturę syntaktyczną języków naturalnych. Istnieją również inne ograniczenia i preferencje, takie jak harmonia języka \citep{Jing2022}, czy preferencje semantyczne, które mogą wpływać na kolejność słów i długość zależności. Niektóre z tych czynników mogą być sprzeczne lub komplementarne względem DLM. Dlatego DLM należy rozumieć jako jeden z wielu czynników wpływających na organizację języka naturalnego.
 
 \section{Różne reprezentacje koordynacji}
-\begin{dependency}[theme = simple]
-    \begin{deptext}[column sep=1em]
-       G \& 1.1 \& 1.2 \& 1.3 \& , \& 2.1 \& 2.2 \& 2.3 \& S \& 3.1 \& 3.2 \& 3.3 \\
+Jeśli chodzi o reprezentacje koordynacji w postaci drzew zależnościowych, to możemy wyróżnić 4 podstawowe podejścia \citep{AnonimoweNieopublikowane, PopelEtAl2013}:\\
+\depstyle{outer bubble}{draw=gray!80, minimum height=20pt, rounded corners=10pt,
+inner sep=5pt, top color=white, bottom color=gray!40}
+\depstyle{inner bubble}{draw=gray!80, minimum height=14pt, rounded corners=8pt,
+inner sep=2pt, top color=gray!40, bottom color=white}
+
+\textbf{Podejście Londyńskie} -- jak wskazuje \citet{AnonimoweNieopublikowane} podejście to nazwać możemy londyńskim, w duchu nazywania podejść od nazw miast, w których zostały one opublikowane. W angielskiej nomenklaturze możemy również znaleźć je pod nazwą \textit{multi-headed}. Zakłada ono, że bezpośrednimi nadrzędnikami każdego z członów koordynacji jest głowa koordynacji, a ostatni z nich jest również nadrzędnikiem spójnika koordynacji.
+
+(7)
+
+\begin{dependency}[theme = simple, group style = outer bubble]
+    \centering
+    \begin{deptext}[column sep=0.5cm]
+       Głowa \& 1.1 \& 1.2 \& 1.3 \& , \& 2.1 \& 2.2 \& 2.3 \& spójnik \& 3.1 \& 3.2 \& 3.3 \& . \\
     \end{deptext}
- \end{dependency}
+    \wordgroup{1}{2}{4}{pierwszy}
+    \wordgroup[inner bubble]{1}{2}{2}{1.1}
+    \wordgroup[inner bubble]{1}{3}{3}{1.2}
+    \wordgroup[inner bubble]{1}{4}{4}{1.3}
+    \wordgroup{1}{1}{1}{glowa}
+    \wordgroup{1}{6}{8}{drugi}
+    \wordgroup[inner bubble]{1}{6}{6}{2.1}
+    \wordgroup[inner bubble]{1}{7}{7}{2.2}
+    \wordgroup[inner bubble]{1}{8}{8}{2.3}
+    \wordgroup{1}{9}{9}{spojnik}
+    \wordgroup{1}{10}{12}{trzeci}
+    \wordgroup[inner bubble]{1}{10}{10}{3.1}
+    \wordgroup[inner bubble]{1}{11}{11}{3.2}
+    \wordgroup[inner bubble]{1}{12}{12}{3.3}
+    \groupedge{glowa}{pierwszy}{}{0}
+    \groupedge{glowa}{drugi}{}{0}
+    \groupedge{glowa}{trzeci}{}{0}
+    \groupedge{trzeci}{spojnik}{}{0}
+\end{dependency}
+\\
+
+\textbf{Podejście Stanfordzkie} -- w angielskiej nomenklaturze określane także mianem \textit{bouquet}. Zakłada ono, że bezpośrednim nadrzędnikiem pierwszego z członów koordynacji jest jej głowa, pierwszy człon równocześnie jest nadrzędnikiem pozostałych członów koordynacji, a ostatni z członów jest nadrzędnikiem spójnika koordynacji.
+
+(8)
+
+\begin{dependency}[theme = simple, group style = outer bubble]
+    \centering
+    \begin{deptext}[column sep=0.5cm]
+       Głowa \& 1.1 \& 1.2 \& 1.3 \& , \& 2.1 \& 2.2 \& 2.3 \& spójnik \& 3.1 \& 3.2 \& 3.3 \& . \\
+    \end{deptext}
+    \wordgroup{1}{2}{4}{pierwszy}
+    \wordgroup[inner bubble]{1}{2}{2}{1.1}
+    \wordgroup[inner bubble]{1}{3}{3}{1.2}
+    \wordgroup[inner bubble]{1}{4}{4}{1.3}
+    \wordgroup{1}{1}{1}{glowa}
+    \wordgroup{1}{6}{8}{drugi}
+    \wordgroup[inner bubble]{1}{6}{6}{2.1}
+    \wordgroup[inner bubble]{1}{7}{7}{2.2}
+    \wordgroup[inner bubble]{1}{8}{8}{2.3}
+    \wordgroup{1}{9}{9}{spojnik}
+    \wordgroup{1}{10}{12}{trzeci}
+    \wordgroup[inner bubble]{1}{10}{10}{3.1}
+    \wordgroup[inner bubble]{1}{11}{11}{3.2}
+    \wordgroup[inner bubble]{1}{12}{12}{3.3}
+    \groupedge{glowa}{pierwszy}{}{0}
+    \groupedge{pierwszy}{drugi}{}{0}
+    \groupedge{pierwszy}{trzeci}{}{0}
+    \groupedge{trzeci}{spojnik}{}{0}
+\end{dependency}
+\\
+
+\textbf{Podejście Moskiewskie} -- w angielskiej nomenklaturze spotkać się możemy również z określeniem \textit{chain}. Zakłada ono, że każda struktura (tj. człony, głowa oraz spójnik) wewnątrz koordynacji jest bezpośrednim nadrzędnikiem następnej struktury wewnątrz koordynacji.
+
+(9)
+
+\begin{dependency}[theme = simple, group style = outer bubble]
+    \centering
+    \begin{deptext}[column sep=0.5cm]
+       Głowa \& 1.1 \& 1.2 \& 1.3 \& , \& 2.1 \& 2.2 \& 2.3 \& spójnik \& 3.1 \& 3.2 \& 3.3 \& . \\
+    \end{deptext}
+    \wordgroup{1}{2}{4}{pierwszy}
+    \wordgroup[inner bubble]{1}{2}{2}{1.1}
+    \wordgroup[inner bubble]{1}{3}{3}{1.2}
+    \wordgroup[inner bubble]{1}{4}{4}{1.3}
+    \wordgroup{1}{1}{1}{glowa}
+    \wordgroup{1}{6}{8}{drugi}
+    \wordgroup[inner bubble]{1}{6}{6}{2.1}
+    \wordgroup[inner bubble]{1}{7}{7}{2.2}
+    \wordgroup[inner bubble]{1}{8}{8}{2.3}
+    \wordgroup{1}{9}{9}{spojnik}
+    \wordgroup{1}{10}{12}{trzeci}
+    \wordgroup[inner bubble]{1}{10}{10}{3.1}
+    \wordgroup[inner bubble]{1}{11}{11}{3.2}
+    \wordgroup[inner bubble]{1}{12}{12}{3.3}
+    \groupedge{glowa}{pierwszy}{}{0}
+    \groupedge{pierwszy}{drugi}{}{0}
+    \groupedge{drugi}{spojnik}{}{0}
+    \groupedge{spojnik}{trzeci}{}{0}
+\end{dependency}
+\\
+
+\textbf{Podejście Praskie} -- w angielskiej nomenklaturze znane również jako \textit{conjunction-headed}. Zakłada, że głowa koordynacji jest nadrzędnikiem spójnika koordynacji, który to jest nadrzędnikiem każdego z jej członów. To właśnie to podejście wykorzystywane jest w PDB.
+
+(10)
+
+\begin{dependency}[theme = simple, group style = outer bubble]
+    \centering
+    \begin{deptext}[column sep=0.5cm]
+       Głowa \& 1.1 \& 1.2 \& 1.3 \& , \& 2.1 \& 2.2 \& 2.3 \& spójnik \& 3.1 \& 3.2 \& 3.3 \& . \\
+    \end{deptext}
+    \wordgroup{1}{2}{4}{pierwszy}
+    \wordgroup[inner bubble]{1}{2}{2}{1.1}
+    \wordgroup[inner bubble]{1}{3}{3}{1.2}
+    \wordgroup[inner bubble]{1}{4}{4}{1.3}
+    \wordgroup{1}{1}{1}{glowa}
+    \wordgroup{1}{6}{8}{drugi}
+    \wordgroup[inner bubble]{1}{6}{6}{2.1}
+    \wordgroup[inner bubble]{1}{7}{7}{2.2}
+    \wordgroup[inner bubble]{1}{8}{8}{2.3}
+    \wordgroup{1}{9}{9}{spojnik}
+    \wordgroup{1}{10}{12}{trzeci}
+    \wordgroup[inner bubble]{1}{10}{10}{3.1}
+    \wordgroup[inner bubble]{1}{11}{11}{3.2}
+    \wordgroup[inner bubble]{1}{12}{12}{3.3}
+    \groupedge{glowa}{spojnik}{}{0}
+    \groupedge{spojnik}{pierwszy}{}{0}
+    \groupedge{spojnik}{drugi}{}{0}
+    \groupedge{spojnik}{trzeci}{}{0}
+\end{dependency}
+\\
+Różnice między tymi podejściami możemy badać wraz z DLM, ponieważ każde z nich może mieć inne długości zależności dla tego samego zdania. Podejścia zilustrowane przykładami (8, 9) sugerują, że niezależnie od tego, czy głowa koordynacji jest z lewej, czy z prawej strony, zgodnie z zasadą DLM pierwszy człon powinien być krótszy -- skróciłoby to sumę długości wszystkich zależności w zdaniu. Przy podejściu (10) pozycja głowy koordynacji nie wpływa na długość zależności, zatem nie ma żadnych powodów, aby prawy człon stawał się krótszy niż lewy. Zakładając podejście (7) możemy zauważyć, że pozycja głowy koordynacji z prawej strony, zgodnie z DLM może skrócić długości zależności, ustawiając krótszy człon po spójniku koordynacji, co byłoby nielogiczne dla pozostałych podejść.
 
 \chapter{Polish Dependency Bank -- źródło danych i narzędzia do analizy}
 Tekst rozdziału
@@ -250,6 +371,10 @@ Mel'čuk, I.A. (1988). \textit{Dependency syntax: theory and practice.} SUNY pre
 
 \bibitem [Przepiórkowski \& Patejuk(2020)]{Przepiorkowski2020}
 Przepiórkowski, A., Patejuk, A. (2020). From Lexical Functional Grammar to enhanced Universal Dependencies. \textit{Lang Resources \& Evaluation} 54, 185–221. \url{https://doi.org/10.1007/s10579-018-9433-z}
+
+\bibitem [Popel et al.(2013)]{PopelEtAl2013}
+Popel, M., Mareček, D., Štěpánek, J., Zeman, D. \& Žabokrtský, Z. (2013). Coordination Structures in Dependency Treebanks. \textit{Proceedings of the 51st Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)}, pp. 517-527. Sofia, Bulgaria
+
 
 \bibitem [Tesnière(1959)]{Tesniere1959}
 Tesnière, L. (1959). \textit{Éléments de syntaxe structurale. Préf. de Jean Fourquet.} C. Klincksieck. Za: de Marneffe, M.-C. \& Nivre, J. (2019). Dependency Grammar. \textit{Annual Review of Linguistics} 5, 197-218. \url{https://doi.org/10.1146/annurev-linguistics-011718-011842}
