--- a/praca/main.tex
+++ b/praca/main.tex
@@ -1079,7 +1079,7 @@ Uniwersytet Warszawski}
 
 
     \chapter{Analiza statystyczna}\label{ch:analiza-statystyczna}
-    W~rozdziale tym przedstawiam wyniki analizy statystycznej dla wyodrębnionych koordynacji, prezentując też istotne tabele oraz wykresy.
+    W~rozdziale tym przedstawiam wyniki analizy statystycznej dla wyodrębnionych koordynacji, prezentując też istotne tabele oraz wykresy. Ponadto, cała ta analiza znajduje się w \ref{zal:d}.
 
 
     \section{Podstawowa analiza}\label{sec:podstawowa-analiza}
