--- a/praca/main.tex
+++ b/praca/main.tex
@@ -1497,7 +1497,7 @@ Jak możemy zauważyć, okazuje się, że~jedynie dwie wartości są~istotne sta
     \begin{enumerate}
         \item{ -- link do~plików z~preprocessingiem danych: \url{https://github.com/kvmilos/PracaLicencjacka/tree/master/preprocessing}
             \label {zal:a}}
-        \item{ -- link do~folderu z~danymi pobranymi z PDB: \url{https://github.com/kvmilos/PracaLicencjacka/blob/master/analizy/r.R}
+        \item{ -- link do~folderu z~danymi pobranymi z PDB: \url{https://github.com/kvmilos/PracaLicencjacka/tree/master/PDB}
             \label {zal:b}}
         \item{ -- link do~tabeli danych po~preprocessingu w~formacie „.csv”: \url{https://github.com/kvmilos/PracaLicencjacka/blob/master/tabela.csv}
             \label {zal:c}}
